re-order items on index page

--- a/admin/adminhome.html
+++ b/admin/adminhome.html
@@ -43,44 +43,25 @@
                 <div class="col-md-12">
                   <a
                     class="btn col-md-12 btn-lg btn-demo"
-                    href="sudo/index.html"
-                    >Admin Management</a
-                  >
+                    href="sudo/index.html">Admin Management</a>
                   <a
                     class="btn col-md-12 btn-lg btn-demo"
-                    href="card/index.html"
-                    >Card Management</a
-                  >
+                    href="adhyayan/index.html">Adhyayan Management</a>
                   <a
                     class="btn col-md-12 btn-lg btn-demo"
-                    href="food/index.html"
-                    >Food Management</a
-                  >
+                    href="card/index.html">Card Management</a>
                   <a
                     class="btn col-md-12 btn-lg btn-demo"
-                    href="gate/index.html"
-                    >Gate Management</a
-                  >
+                    href="food/index.html">Food Management</a>
                   <a
                     class="btn col-md-12 btn-lg btn-demo"
-                    href="adhyayan/index.html"
-                    >Adhyayan Management</a
-                  >
+                    href="gate/index.html">Gate Management</a>
                   <a
                     class="btn col-md-12 btn-lg btn-demo"
-                    href="room/index.html"
-                    >Room Management</a
-                  >
+                    href="room/index.html">Room Management</a>
                   <a
                     class="btn col-md-12 btn-lg btn-demo"
-                    href="report/index.html"
-                    >Admin Reports</a
-                  >
-                  <a
-                    class="btn col-md-12 btn-lg btn-demo"
-                    href="travel/index.html"
-                    >Travel Management</a
-                  >
+                    href="travel/index.html">Travel Management</a>
                 </div>
               </div>
             </div>
