--- a/admin/food/manageFood.html
+++ b/admin/food/manageFood.html
@@ -152,11 +152,9 @@
                   <table id="bookingsTable" class="table table-striped table-bordered">
                     <thead>
                       <tr>
-                        <th>&nbsp;</th>
                         <th>Date</th>
-                        <th>Meals</th> 
-                        <th>Spice Level</th>
-                        <th>Tea/Coffee</th>
+                        <th>Meal</th> 
+                        <th>Action</th>
                       </tr>
                     </thead>
                     <tbody id="bookingsTableBody">
