show flat list as dropdown

--- a/admin/room/flatBooking.html
+++ b/admin/room/flatBooking.html
@@ -46,7 +46,7 @@
               <form id="flatBookingForm">
                 <div class="row">
                   <div class="col-sm-3">
-                    <label for="mobile" class="col-form-label">Mobile No:</label>
+                    <label for="mobile" class="col-form-label">Guest Mobile No:</label>
                   </div>
                   <div class="col-sm-4">
                     <input type="tel" class="form-control" id="mobile" name="mobile" required />
@@ -74,7 +74,8 @@
                     <label for="flat_no" class="col-form-label">Flat No:</label>
                   </div>
                   <div class="col-sm-3">
-                    <input type="text" class="form-control" id="flat_no" name="flat_no" required />
+                    <select id="flat_no" name="flat_no" required>
+                    </select>
                   </div>
                 </div>
 
