fix bug - center

--- a/admin/room/occupancyReport.html
+++ b/admin/room/occupancyReport.html
@@ -51,7 +51,7 @@
                         <th>Booking ID</th>
                         <th>Guest Name</th> 
                         <th>Mobile No.</th>
-                        <th>Centre</th>
+                        <th>Center</th>
                         <th>Room No</th>
                         <th>Room Type</th>
                         <th>Check-in</th>
