--- a/admin/room/roomReports.html
+++ b/admin/room/roomReports.html
@@ -104,7 +104,7 @@
                         <th></th>
                         <th>Guest Name</th> 
                         <th>Mobile No.</th>
-                        <th>Centre</th>
+                        <th>Center</th>
                         <th>Room No</th>
                         <th>Room Type</th>
                         <th>Check-in</th>
