--- a/admin/room/index.html
+++ b/admin/room/index.html
@@ -80,7 +80,7 @@
                   <a
                     class="btn col-md-12 btn-lg btn-demo"
                     href="dailyGuestCountReport.html"
-                    >Daily Guest Count Report</a
+                    >Daily Guest Count / Availability Report</a
                   >
                 </div>
               </div>
