--- a/admin/food/manageFood.html
+++ b/admin/food/manageFood.html
@@ -46,7 +46,7 @@
 
                 <div class="row">
                   <div class="col-sm-3">
-                    <label for="mobile" class="col-form-label">Mobile No:</label>
+                    <label for="mobile" class="col-form-label">Enter Mobile No:</label>
                   </div>
                   <div class="col-sm-4">
                     <input type="tel" class="form-control" id="mobile" name="mobile" />
@@ -55,7 +55,7 @@
 
                 <div class="row">
                   <div class="col-sm-3">
-                    <label for="cardno" class="col-form-label">Card No:</label>
+                    <label for="cardno" class="col-form-label">Or Card No:</label>
                   </div>
                   <div class="col-sm-4">
                     <input type="tel" class="form-control" id="cardno" name="cardno" />
