Added Config Support

--- a/admin/adhyayan/updateAdhyayan.html
+++ b/admin/adhyayan/updateAdhyayan.html
@@ -16,6 +16,7 @@
 <!-- Custom styles for this template -->
 <link href="../../style/css/clockpicker.css" rel="stylesheet">
 <link href="../../style/css/style.css" rel="stylesheet">
+<script src="../../style/js/config.js"></script>
 </head>
 <body>
 <div class="fullheight" style="background:url(../../style/images/RC_Blur.png) no-repeat center center; background-size: cover;">
